update tool policy

--- a/resources/agentgateway/tool-policy.yaml
+++ b/resources/agentgateway/tool-policy.yaml
@@ -1,5 +1,5 @@
-apiVersion: gloo.solo.io/v1alpha1
-kind: GlooTrafficPolicy
+apiVersion: gateway.kgateway.dev/v1alpha1
+kind: TrafficPolicy
 metadata:
   name: tool-policy
 spec:
@@ -10,4 +10,4 @@ spec:
   rbac:
     policy:
       matchExpressions:
-        - 'jwt.sub == "alice" && mcp.tool.name == "echo"'
+        - 'jwt.sub == "acf04f2b-f529-45ef-a2d8-5311fc3c8301" && mcp.tool.name == "echo"'
