--- a/resources/access-policies/agent-access-policy.yaml
+++ b/resources/access-policies/agent-access-policy.yaml
@@ -2,14 +2,15 @@ apiVersion: policy.kagent-enterprise.solo.io/v1alpha1
 kind: AccessPolicy
 metadata:
   name: agent-access-policy
-  namespace: kagent
 spec:
-  action: ALLOW
+  action: DENY
   from:
     subjects:
     - kind: Agent
       name: demoagent
-      namespace: kagent
+      namespace: default
   targetRef:
     kind: MCPServer
     name: server-everything
+    tools:
+    - printEnv
