--- a/resources/agentgateway-base.yaml
+++ b/resources/agentgateway-base.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: agentgateway
 spec:
-  gatewayClassName: agentgateway-enterprise
+  gatewayClassName: enterprise-agentgateway
   listeners:
   - protocol: HTTP
     port: 8080
@@ -14,12 +14,11 @@ spec:
       namespaces:
         from: All
 ---
-apiVersion: gateway.kgateway.dev/v1alpha1
-kind: Backend
+apiVersion: agentgateway.dev/v1alpha1
+kind: AgentgatewayBackend
 metadata:
   name: mcp-backend
 spec:
-  type: MCP
   mcp:
     targets:
     - name: mcp-target
@@ -38,5 +37,5 @@ spec:
   rules:
     - backendRefs:
       - name: mcp-backend
-        group: gateway.kgateway.dev
-        kind: Backend
+        group: agentgateway.dev
+        kind: AgentgatewayBackend
